fix bug img not responsive

--- a/src/styles/dashboard.less
+++ b/src/styles/dashboard.less
@@ -2,6 +2,11 @@
     height: 100vh;
 }
 .main-nav{
+    ul{
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
     position: fixed;
     width: @nav-width;
     height:  100vh;
