--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -2,11 +2,11 @@ body{
     padding: 0;
     margin: 0;
 }
-ul{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
+
 .ant-table-thead > tr > th, .ant-table-tbody > tr > td{
     padding: 10px;
+}
+
+img{
+    max-width: 100%;
 }
